# AIintheWildGP

./: client.py  docs_links.txt  exp2.py  fart.py  fart3.py  hand_gesture_model_landmarks.keras  landmark_label_classes.npy  main.py  please.py  pyproject.toml  server.py  tello_stream.py  tello_wrapper.py  test.py  test2.py  test3.py
