[project]
name = "aiinthewildgp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.14",
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tello-asyncio>=2.1.3",
    "tensorflow>=2.19.0",
]
